MZ-53 combined ShippingAddress.FirstName and LastName to Name, removed Email

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -187,10 +187,9 @@
                     };
 
                     self.redirectOrder = function(orderId) {
-                        location.href = "/orders/" + orderId + "/shipping";
+                        location.href = "@Html.Language()/orders/" + orderId + "/shipping";
                     };
                 };
-
 
                 var AuctionsViewModel = function(data) {
                     var self = this;
