--- a/src/Mzayad.Web/Views/Orders/Index.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Index.cshtml
@@ -56,7 +56,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">@Global.Name : </label>
             <div class="col-sm-10">
-                <p class="form-control-static">@NameFormatter.GetFullName(Model.Address.FirstName,Model.Address.LastName)</p>
+                <p class="form-control-static">@NameFormatter.GetFullName(Model.Address.Name,Model.Address.LastName)</p>
             </div>
         </div>
         <div class="form-group">
