--- a/src/Mzayad.Web/Views/Orders/Summary.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Summary.cshtml
@@ -66,7 +66,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">@Global.FirstName</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static">@Model.Order.Address.FirstName</p>
+                    <p class="form-control-static">@Model.Order.Address.Name</p>
                 </div>
             </div>
             <div class="form-group">
