MZ-53 finished simplifying ShippingAddress names and phone numbers; changed OrdersController route attributes

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -187,7 +187,7 @@
                     };
 
                     self.redirectOrder = function(orderId) {
-                        location.href = "@Html.Language()/orders/" + orderId + "/shipping";
+                        location.href = "@Html.Language()/orders/shipping/" + orderId;
                     };
                 };
 
