--- a/src/Mzayad.Web/Views/Orders/Shipping.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Shipping.cshtml
@@ -26,8 +26,8 @@
                 <div class="form-group">
                     @Html.Label(Global.PhoneNumber).Required()
                     <div class="form-inline">
-                        @Html.TextBoxFor(m => m.PhoneCountryCode, new { @class = "form-control form-control-sm", @type = "tel", maxlength = 4 })
-                        @Html.TextBoxFor(m => m.PhoneLocalNumber, new { @class = "form-control", @type = "tel" })
+                        @Html.TextBoxFor(m => m.ShippingAddress.PhoneCountryCode, new { @class = "form-control form-control-sm", @type = "tel", maxlength = 4 })
+                        @Html.TextBoxFor(m => m.ShippingAddress.PhoneLocalNumber, new { @class = "form-control", @type = "tel" })
                     </div>
                     @Html.ValidationMessageFor(m => m.ShippingAddress.PhoneCountryCode, Global.PhoneNumberRequiredErrorMessage)
                     @Html.ValidationMessageFor(m => m.ShippingAddress.PhoneLocalNumber, Global.PhoneNumberRequiredErrorMessage)
