--- a/src/Mzayad.Web/Areas/admin/Views/Orders/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Orders/Index.cshtml
@@ -27,6 +27,10 @@
     </div>
 }
 
+<ul class="link-list">
+    <li><a href="@Url.Action("OrdersExcel", "Orders", new { search = Model.Search, status = Model.Status })"><i class="fa fa-file-excel-o fa-pad-right"></i>Download Excel</a></li>
+</ul>
+
 <p>&nbsp;</p>
 
 @if (!Model.Orders.Any())
