--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Sponsors")"><i class="fa fa-fw fa-pad-right fa-money"></i>Sponsors</a></li>
             <li><a disabled href="#"><i class="fa fa-fw fa-pad-right fa-gamepad"></i>Gamification</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Avatars")"><i class="fa fa-fw fa-pad-right fa-rocket"></i>Avatars</a></li>
-            <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li> 
-            <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li> 
+            <li><a href="@Url.Action("Index", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>Subscriptions</a></li> 
+            <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li>
+            <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li>
             <li><a disabled href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-bar-chart"></i>Reports</a></li>
         </ul>
     </div>
