--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -124,6 +124,15 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .btn:focus:hover {
   opacity: 0.7;
 }
+.btn.submitting,
+.btn:hover.submitting,
+.btn:focus.submitting {
+  text-transform: none !important;
+  font-weight: normal !important;
+  letter-spacing: normal;
+  text-shadow: none;
+  opacity: 0.7;
+}
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
