--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -134,6 +134,14 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     &:hover {
         opacity: 0.7;
     }
+
+    &.submitting {
+        text-transform: none !important;
+        font-weight: normal !important;
+        letter-spacing: normal;
+        text-shadow: none;
+        opacity: 0.7;
+    }
 }
 
 .btn-default, .btn-default:hover, .btn-default:focus {
