--- a/src/Mzayad.Web/Views/Orders/Summary.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Summary.cshtml
@@ -1,7 +1,7 @@
-﻿@using Mzayad.Core.Formatting
-@using Mzayad.Models.Enum
-@using OrangeJetpack.Localization
-@model Mzayad.Web.Models.Order.OrderSummaryViewModel
+﻿@using Mzayad.Models.Enum
+@using Mzayad.Web.Models.Order
+
+@model OrderSummaryViewModel
 
 @{
     ViewBag.Title = Global.OrderSummary;
@@ -11,55 +11,13 @@
 {
     @Html.AntiForgeryToken()
     
+
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">@Global.OrderDetails</h3>
         </div>
         <div class="panel-body form-horizontal">
-            @foreach (var item in Model.Order.Items)
-            {
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">@Global.ItemName</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static">
-                            @item.Localize(Model.Language, i => i.Name).Name
-                        </p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">@Global.ItemPrices</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static">
-                            @CurrencyFormatter.Format(item.ItemPrice)
-                        </p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">@Global.Quantity</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static">
-                            @item.Quantity
-                        </p>
-                    </div>
-                </div>
-                <hr />
-            }
-            <div class="form-group">
-                <label class="col-sm-2 control-label">@Global.Shipping</label>
-                <div class="col-sm-10">
-                    <p class="form-control-static">
-                        @CurrencyFormatter.Format(Model.Order.Shipping)
-                    </p>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">@Global.Total</label>
-                <div class="col-sm-10">
-                    <p class="form-control-static">
-                        @CurrencyFormatter.Format(Model.Order.Total)
-                    </p>
-                </div>
-            </div>
+            @Html.Partial("OrderItemsTable", OrderViewModel.Create(Model.Order))
         </div>
     </div>
 
