--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/KnetTransaction.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/KnetTransaction.cshtml
@@ -5,7 +5,7 @@
 
 <label class="col-sm-4 control-label">@Global.Amount</label>
 <div class="col-sm-8">
-    <p class="form-control-static">@CurrencyFormatter.Format(Model.Order.Total, Currency.Kwd)</p>
+    <p class="form-control-static">@CurrencyFormatter.Format(Model.Order.Total)</p>
 </div>
 
 <label class="col-sm-4 control-label">@Global.KnetPaymentIdLabel</label>
