--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section styles {
-    @Styles.Render("~/css/calender")
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     @Styles.Render("~/css/admin")
     @RenderSection("styles", false)
     <style>
@@ -44,8 +44,8 @@
 </div>
 
 @section scripts {
+    @Scripts.Render("~/js/jquery-ui")
     @Scripts.Render("~/js/validate")
-    @Scripts.Render("~/js/calender")
     <script src="~/scripts/kendo.web.min.js"></script>
     <script src="~/Scripts/kendo.aspnetmvc.min.js"></script>
     @Html.Kendo().DeferredScripts()
@@ -55,6 +55,7 @@
             $("a[disabled]").on("click", function(e) {
                 e.preventDefault();
             });
+            $(".date-picker").datepicker({ dateFormat: "dd/mm/yy" });
         })
     </script>
 }
