--- a/src/Mzayad.Web/Areas/admin/Views/WishLists/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/WishLists/Index.cshtml
@@ -9,11 +9,13 @@
 @using (Html.BeginForm(null, null, FormMethod.Get, new { @class = "form-inline form-search" }))
 {
     <div class="form-group">
-            @Html.Label("Added Between")
-            @Html.EditorFor(m => m.StartDate) &mdash;
-            @Html.EditorFor(m => m.EndDate)
-            <button type="submit" class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
+        @Html.Label("Added Between")
+        @Html.EditorFor(m => m.StartDate) &mdash;
+        @Html.EditorFor(m => m.EndDate)
+        <button type="submit" class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
     </div>
+    
+    @Html.ValidationMessageFor(m => m.StartDate)
 }
 
 @if (!Model.WishLists.Any())
