--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -149,7 +149,7 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     color: @white;
 }
 
-.btn-sm, .btn:hover {
+.btn-sm, .btn-sm:hover, .btn-sm:focus {
     padding: 5px 10px;
     font-size: 1.4rem;
 }
