MZ-60 changed text

--- a/src/Mzayad.Web/Areas/admin/Views/WishLists/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/WishLists/Edit.cshtml
@@ -14,7 +14,7 @@
 
             <section>
                 <div class="form-group">
-                    @Html.Label("List Of wishlist item that will edit")
+                    @Html.Label("User's Wishlist Item")
                     <div>
                         <code>
                             @string.Join(",", Model.WishLists.Select(i => i.NameEntered))
