--- a/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
@@ -9,28 +9,24 @@
 
             <section>
                 <div class="form-group">
-                    @Html.LabelFor(i => i.Subscription.Name, "Name")
+                    @Html.LabelFor(i => i.Subscription.Name, "Name").Required("Required")
                     @Html.EditorFor(i => i.Subscription.Name, Model)
                     @Html.ValidationMessageFor(i => i.Subscription.Name, "Please enter a product name.")
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(i => i.Subscription.Status, "Status")
+                    @Html.LabelFor(i => i.Subscription.Status, "Status").Required()
                     @Html.DropDownListFor(i => i.Subscription.Status, Model.StatusList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(i => i.Subscription.Status, "Please select a Status.")
+                    @Html.ValidationMessageFor(i => i.Subscription.Status, "Please select a status.")
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(i => i.Subscription.ExpirationUtc, "Expiration")
+                    @Html.LabelFor(i => i.Subscription.ExpirationUtc, "Expiration") <small>[optional]</small>
                     @Html.EditorFor(i => i.Subscription.ExpirationUtc)
-                    @Html.ValidationMessageFor(i => i.Subscription.ExpirationUtc, "Please enter a Expiration date.")
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(i => i.Subscription.Quantity, "Quantity")
+                    @Html.LabelFor(i => i.Subscription.Quantity, "Quantity") <small>[optional]</small>
                     @Html.TextBoxFor(i => i.Subscription.Quantity, new { @class = "form-control", @type = "number" })
-                    @Html.ValidationMessageFor(i => i.Subscription.Quantity, "Please enter a Quantity.")
                 </div>
             </section>
-
-
 
             <section class="form-buttons">
                 <button type="submit" class="btn btn-default">Save</button>
