--- a/src/Mzayad.Web/Areas/admin/Views/WishLists/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/WishLists/Edit.cshtml
@@ -2,7 +2,7 @@
 @model Mzayad.Web.Areas.admin.Models.WishList.EditViewModel
 
 @{
-    ViewBag.Title = "Edit Wishlist items";
+    ViewBag.Title = "Edit Wishlist";
 }
 
 <div class="row">
@@ -35,12 +35,3 @@
         }
     </div>
 </div>
-
-
-
-@section scripts {
-    @Scripts.Render("~/js/validate")
-
-}
-
-
