added project Key and Token to AppSettings to accommodate latest version of AzureBlobStorage

--- a/src/Mzayad.Web/Areas/admin/Views/WishLists/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/WishLists/Index.cshtml
@@ -31,6 +31,6 @@
     {
         columns.Bound(i => i.Name);
         columns.Bound(i => i.Count);
-        columns.LinkColumn("Edit", "WishLists/edit?name=#=Name#");
+        columns.LinkColumn("Edit", "wishlists/edit?name=#=NameUrlEscaped#");
     })
 )
