MZ-67 Add SubscriptionUtc To ApplicationUser on ~/admin/users/details/:id add subscription Section

--- a/src/Mzayad.Web/Content/site-admin.less
+++ b/src/Mzayad.Web/Content/site-admin.less
@@ -11,3 +11,15 @@
 .ui-corner-all {
     border-radius: 0 !important;
 }
+
+.text-success {
+    color: @success;
+}
+
+.text-danger {
+    color: @danger;
+}
+
+.text-warning {
+    color: @warning;
+}
