--- a/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
@@ -8,6 +8,31 @@
     ViewBag.Title = "User Details - " + NameFormatter.GetFullName(Model.FirstName, Model.LastName);
 }
 
+@helper  GetSubscription()
+{
+    if (!Model.SubscriptionUtc.HasValue)
+    {
+        <div class="text-warning">Never Subscribed</div>
+    }
+    else
+    {
+        if (Model.SubscriptionUtc.Value > DateTime.Now)
+        {
+            <div>
+                <span class="text-success">ACTIVE </span> until @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
+            </div>
+        }
+        else
+        {
+            <div>
+                <span class="text-danger">EXPIRED </span> on @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
+            </div>
+        }
+    }
+
+}
+
+
 <h2>Summary</h2>
 
 <section class="form-section">
@@ -31,6 +56,13 @@
         <p class="form-control-static">
             @Model.CreatedUtc.Humanize()
             <small>(<time datetime="@Model.CreatedUtc.ToString("s")">@DateTimeFormatter.ToLocalTime(Model.CreatedUtc, DateTimeFormatter.Format.Full)</time>)</small>
+        </p>
+    </div>
+    
+    <div class="form-group">
+        @Html.Label("Subscription")
+        <p class="form-control-static">
+            @GetSubscription()
         </p>
     </div>
     
