--- a/src/Mzayad.Web/Content/site-admin.css
+++ b/src/Mzayad.Web/Content/site-admin.css
@@ -7,3 +7,12 @@
 .ui-corner-all {
   border-radius: 0 !important;
 }
+.text-success {
+  color: #008c00;
+}
+.text-danger {
+  color: #b94a48;
+}
+.text-warning {
+  color: #d9a300;
+}
