--- a/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Mzayad.Web.Extensions
-@model Mzayad.Models.ApplicationUser
+@model Mzayad.Web.Areas.Admin.Models.Users.EditSubscriptionViewModel
 
 @{
     ViewBag.Title = "Edit Subscription";
@@ -7,22 +7,22 @@
 
 @helper  GetSubscription()
 {
-    if (!Model.SubscriptionUtc.HasValue)
+    if (!Model.User.SubscriptionUtc.HasValue)
     {
         <div class="text-warning">Never Subscribed</div>
     }
     else
     {
-        if (Model.SubscriptionUtc.Value > DateTime.Now)
+        if (Model.User.SubscriptionUtc.Value > DateTime.Now)
         {
             <div>
-                <span class="text-success">ACTIVE </span> until @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
+                <span class="text-success">ACTIVE </span> until @Model.User.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
             </div>
         }
         else
         {
             <div>
-                <span class="text-danger">EXPIRED </span> on @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
+                <span class="text-danger">EXPIRED </span> on @Model.User.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
             </div>
         }
     }
@@ -43,19 +43,19 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(i => i.SubscriptionUtc, "New Subscription")
+            @Html.LabelFor(i => i.CurrentSubscription, "New Subscription")
             <div class="row">
                 <div class="col-md-3">
-                    @Html.EditorFor(i => i.SubscriptionUtc)
+                    @Html.EditorFor(i => i.CurrentSubscription)
+                </div>
+                <div class="col-md-2 text-right" style="padding-top: 5px;">
+                    <a href="#" id="btnAddDays"> <span class="fa fa-chevron-left"></span>&nbsp;&nbsp; Add Days</a>
                 </div>
                 <div class="col-md-2">
-                    <a href="#"> < Add Days</a>
-                </div>
-                <div class="col-md-3">
-                    @Html.TextBox("AddDay", "30", new { @class = "form-control", @type = "number", @style = "width: 150px;" })
+                    @Html.TextBoxFor(i=>i.AddDays,new {@class="form-control" , @type="number"})
                 </div>
             </div>
-            @Html.ValidationMessageFor(i => i.SubscriptionUtc, "Please enter a subscription date.")
+            @Html.ValidationMessageFor(i => i.CurrentSubscription, "Please enter a subscription date.")
         </div>
 
     </section>
@@ -63,10 +63,30 @@
     <section class="form-buttons">
         <button type="submit" class="btn btn-default">Save</button>
     </section>
+    
+    @Html.HiddenFor(i=>i.User.Id)
 }
 
 @section scripts {
     @Scripts.Render("~/js/validate")
+    <script type="text/javascript">
+        $(function() {
+
+            $(".date-picker").datepicker({ minDate: 0, dateFormat: 'dd/mm/yy' });
+
+            $("#btnAddDays").click(function() {
+                var $datePicker = $(".date-picker");
+                var $addDayTxt = $("#AddDays");
+                var parts = $datePicker.val().split('/');
+                var cureentDate = new Date(parts[2], parts[1] - 1, parts[0],0,0,0,0);
+                cureentDate.setDate(cureentDate.getDate() + parseInt($addDayTxt.val()));
+                var date_str = $.datepicker.formatDate('dd/mm/yy', cureentDate);
+                $datePicker.val(date_str);
+
+            });
+
+        });
+    </script>
 }
 
 
