minor grammar change

--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -136,7 +136,7 @@
                 <div class="form-group">
                     @Html.LabelFor(i => i.Product.Notes)
                     @Html.TextAreaFor(i => i.Product.Notes, new { @class = "form-control", @style="height: 150px;" })
-                    <div class="help-block">Note are <strong>not</strong> visible to site users</div>
+                    <div class="help-block">Notes are <strong>not</strong> visible to site users</div>
                     @Html.ValidationMessageFor(i => i.Product.Notes)
                 </div>
             </section>
