--- a/src/Mzayad.Web/Areas/admin/Views/Avatars/Add.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Avatars/Add.cshtml
@@ -3,29 +3,22 @@
 
 @{
     ViewBag.Title = "Upload Avatar";
-
 }
-<div class="row">
-    <div class="@Html.Css().FormNarrow">
 
-        @using (Html.BeginForm("Add","Avatars",FormMethod.Post, new { enctype = "multipart/form-data" }))
+<div class="row">
+    <div class="@Html.Css().FormNormal">
+        @using (Html.BeginForm("Add", "Avatars", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-
             <section>
                 <div class="form-group">
-                    @Html.Label("Avatar Image")
-                    <input type="file" id="file" name="upload" class="form-control"/>
-                    
+                    <label for="file">Avatar Image</label>
+                    <input type="file" id="file" name="upload" class="form-control" />
                 </div>
-
             </section>
-
             <section class="form-buttons">
                 <button type="submit" class="btn btn-default">Upload</button>
             </section>
-
-
         }
     </div>
 </div>
