--- a/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Humanizer
-@using Kendo.Mvc.UI
 @using Mzayad.Web.Extensions
 @using Mzayad.Web.Resources
 @using OrangeJetpack.Base.Core.Formatting
@@ -8,31 +7,6 @@
 @{
     ViewBag.Title = "User Details - " + NameFormatter.GetFullName(Model.FirstName, Model.LastName);
 }
-
-@helper  GetSubscription()
-{
-    if (!Model.SubscriptionUtc.HasValue)
-    {
-        <div class="text-warning">Never Subscribed</div>
-    }
-    else
-    {
-        if (Model.SubscriptionUtc.Value > DateTime.Now)
-        {
-            <div>
-                <span class="text-success">ACTIVE </span> until @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
-            </div>
-        }
-        else
-        {
-            <div>
-                <span class="text-danger">EXPIRED </span> on @Model.SubscriptionUtc.Value.ToString("dd MMM yyyy HH:mm")
-            </div>
-        }
-    }
-
-}
-
 
 <h2>Summary</h2>
 
@@ -61,9 +35,9 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("Subscription") &nbsp;&nbsp;&nbsp;&nbsp; <small>@Html.ActionLink("Edit Subscription", "EditSubscription", "Users", new { id = Model.UserId }, null)</small>
+        @Html.Label("Subscription") <small>@Html.ActionLink("Edit Subscription", "EditSubscription", "Users", new { id = Model.UserId }, null)</small>
         <p class="form-control-static">
-            @GetSubscription()
+            @Html.DisplayFor(m => m.SubscriptionUtc, "SubscriptionUtc")
         </p>
     </div>
 
@@ -117,23 +91,42 @@
 }
 
 
-<h2>Subscription Log</h2>
+@if (Model.SubscriptionLogs.Any())
+{
+    <h2>Subscription Log</h2>
 
-@(Html.Kendo().Grid(Model.SubscriptionLogs)
-                    .Init(ajax => ajax.Action("GetSubscriptionLog", "Users", new { id = Model.UserId }))
-    .Columns(columns =>
-    {
-        columns.Bound(i => i.CreatedUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("Date/Time");
-        columns.Bound(i => i.OriginalSubscriptionUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("Original Subscription");
-        columns.Bound(i => i.ModifiedSubscriptionUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("New Subscription");
-        columns.Bound(i => i.DaysAdded).ClientTemplate("<span class='fa fa-plus'></span> #= DaysAdded # days").Title("Change");
-        columns.Bound(i => i.ModifiedByUser).ClientTemplate(" #= ModifiedByUser.FirstName #  #= ModifiedByUser.LastName # ").Title("Changed By");
-
-    })
-        
-)
-
-
-@section scripts {
-    @Scripts.Render("~/js/validate")
+    <table class="@Html.Css().GridTable">
+        <thead>
+        <tr>
+            <th>Date/Time</th>
+            <th>Original Subscription</th>
+            <th>New Subscription</th>
+            <th>Change</th>
+            <th>Changed By</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var log in Model.SubscriptionLogs)
+        {
+            <tr>
+                <td>
+                    @DateTimeFormatter.ToLocalTime(log.CreatedUtc, DateTimeFormatter.Format.Full)
+                </td>
+                <td>
+                    @if (log.OriginalSubscriptionUtc.HasValue)
+                    {
+                        @DateTimeFormatter.ToLocalTime(log.OriginalSubscriptionUtc, DateTimeFormatter.Format.Full)
+                    }
+                </td>
+                <td>
+                    @DateTimeFormatter.ToLocalTime(log.ModifiedSubscriptionUtc, DateTimeFormatter.Format.Full)
+                </td>
+                <td><span class='fa fa-plus'></span> @log.DaysAdded days</td>
+                <td>@NameFormatter.GetFullName(log.ModifiedByUser.FirstName, log.ModifiedByUser.LastName)</td>
+            </tr>
+        }
+        </tbody>
+    </table>
 }
+
+
